--- a/theme/default/src/main/webapp/themes/default/layout.html
+++ b/theme/default/src/main/webapp/themes/default/layout.html
@@ -62,7 +62,7 @@
 				<ul class="nav nav-tabs">
 					{% for item in menu %}
 					<li class="menu {% if item.selected %}active{% endif %}" menu="{{item.id}}">
-						<a href="{{contextPath}}/{{item.path}}" alt="{{ item.description | mls }}"><span>{{ item.title | mls }}</span></a>
+						<a href="{{contextPath}}{{item.fullPath}}" alt="{{ item.description | mls }}"><span>{{ item.title | mls }}</span></a>
 					</li>
 					{% endfor %}
 				</ul>
@@ -76,10 +76,10 @@
 		<div class="col-lg-12">
 			<div id="subnav">
 			{% for item in menu %}
-				<ul class="nav nav-pills {% if not item.selected %}hide{% endif %}" menu="{{id}}">
+				<ul class="nav nav-pills {% if not item.selected %}hide{% endif %}" menu="{{item.id}}">
 					{% for child in item.menu %}
 					<li class="submenu {% if child.selected %}active{% endif %}">
-						<a href="{{contextPath}}/{{path}}" alt="{{ description | mls }}"><span>{{ title | mls }}</span></a>
+						<a href="{{contextPath}}{{child.fullPath}}" alt="{{ child.description | mls }}"><span>{{ child.title | mls }}</span></a>
 					</li>
 					{% endfor %}
 				</ul>
