--- a/bennu-portal/src/main/webapp/bennu-portal/bootstrap.html
+++ b/bennu-portal/src/main/webapp/bennu-portal/bootstrap.html
@@ -1,154 +1,53 @@
-<html>
+<html ng-app>
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-resource.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-animate.js" type="text/javascript"></script>
+	<script type="text/javascript" src="bennu-portal/js/jquery.min.js"></script>
+	<script type="text/javascript" src="bennu-portal/js/less.min.js"></script>
+	<script type="text/javascript" src="bennu-portal/bootstrap.js"></script>
+	<script type="text/javascript" src="bennu-portal/portal.js"></script>
 	<title>Bootstrap</title>
 </head>
 
 <h1>Bootstrap</h1>
-<form>
-	<dl>
-		<dt>In what country are you at?</dt>
-		
-		<dd>
-			<label for="country">Country:</label>
-			<input id="country" type="text" placeholder="Three Letter ISO 3166-1" />
-		</dd>
-	</dl>
-	
-	<dl>
-		<dt>Let's setup your school. You need to set up your university and school name.</dt>
-		
-		<dd>
-			<label for="universityName">University Name:</label>
-			<input id="universityName" type="text" placeholder="Example University" />
-		</dd>
-		<dd>
-			<label for="universityAcronym">University Acronym:</label>
-			<input id="universityAcronym" type="text" placeholder="EU" />
-		</dd>
-		<dd>
-			<label for="schoolName">School Name:</label>
-			<input id="schoolName" type="text" placeholder="Example Engineering School" />
-		</dd>
-		<dd>
-			<label for="schoolAcronym">School Acronym:</label>
-			<input id="schoolAcronym" type="text" placeholder="EES" />
-		</dd>
-	</dl>	
-	
-	<dl>
-		<dt>Next we need to setup the domain information about your appddcations.</dt>
 
-		<dd>
-			<label for="schoolDomain">School Domain:</label>
-			<input id="schoolDomain" type="text" placeholder="ees.example.edu" />
-		</dd>
-		<dd>
-			<label for="schoolURL">School URL:</label>
-			<input id="schoolURL" type="text" placeholder="http://ees.example.edu" />
-		</dd>
-		<dd>
-			<label for="schoolEmailDomain">School Email Domain:</label>
-			<input id="schoolEmailDomain" type="text" placeholder="ees.example.edu" />
-		</dd>
-		<dd>
-			<label for="instalationName">Instalation Name:</label>
-			<input id="instalationName" type="text" placeholder="EES FenixEdu" />
-		</dd>
-		<dd>
-			<label for="instalationDomain">Instalation Domain:</label>
-			<input id="instalationDomain" type="text" placeholder="fenixedu.ees.example.edu" />
-		</dd>
-	</dl>
+<div ng-controller="BootstrapCtrl">
+	<form ng-submit="submitWizard()">
+		<div ng-show="hasSections()">
 
-	<dl>
-		<dt>Now we need to create an administrator account.</dt>
+			<div ng-repeat="section in sections">
+				<div ng-show="getCurrentStep() == section">
+					<fieldset>
+						<legend>{{section.name}}</legend>
+						<p>{{section.description}}</p>
+						<div ng-repeat="field in section.fields">
+							<label name="{{field.name}}">{{field.name}}:</label>
+							<input name="{{field.name}}" type="text" placeholder="{{field.hint}}" ng-required="{{field.isMandatory}}" ng-model="field.value" />
+						</div>
+					</fieldset>
 
-		<dd>
-			<label for="username">Username:</label>
-			<input id="username" type="text" placeholder="username" />
-		</dd>
-		<dd>
-			<label for="name">Name:</label>
-			<input id="name" type="text" placeholder="FenixEdu Administrator" />
-		</dd>
-		<dd>
-			<label for="email">Email:</label>
-			<input id="email" type="text" placeholder="username@ees.example.edu" />
-		</dd>
-		<dd>
-			<label for="password">Password:</label>
-			<input id="password" type="text" placeholder="password" />
-		</dd>
-		<dd>
-			<label for="passwordRetyped">Password (again):</label>
-			<input id="passwordRetyped" type="text" placeholder="password" />
-		</dd>
-	</dl>
+					<div id="wizzardControll">
+						<a class="btn" ng-click="previousStep()" ng-show="!$first">Back</a>
+						<a class="btn btn-primary" ng-click="nextStep()" ng-show="!$last">Next</a>
+					</div>
+				</div>
 
-	<input type="submit" id="submitButton" value="Submit">
-</form>
-<pre id="result"></pre>
-<script type="text/javascript">
-	var cookies = null;
-	
-	function readCookie(name, c, C, i) {
-		if (cookies) {
-			return cookies[name];
-		}
+			</div>
 
-		c = document.cookie.split('; ');
-		cookies = {};
+			<input type="submit" value="Submit">
+		</div>
+	</form>
+</div>
 
-		for (i = c.length - 1; i >= 0; i--) {
-			C = c[i].split('=');
-			cookies[C[0]] = C[1];
-		}
+<style type="text/css">
 
-		return cookies[name];
-	}
+fieldset {
+	border: 0px;
+}
 
-	var contextPath = readCookie("contextPath") || "";
-	window.contextPath = contextPath;
-
-	function loadBootstrapData() {
-		return {
-			country: $("#country").val(),
-			universityName: $("#universityName").val(),
-			universityAcronym: $("#universityAcronym").val(),
-			schoolName: $("#schoolName").val(),
-			schoolAcronym: $("#schoolAcronym").val(),
-			schoolDomain: $("#schoolDomain").val(),
-			schoolURL: $("#schoolURL").val(),
-			schoolEmailDomain: $("#schoolEmailDomain").val(),
-			instalationName: $("#instalationName").val(),
-			instalationDomain: $("#instalationDomain").val(),
-			username: $("#username").val(),
-			name: $("#name").val(),
-			email: $("#email").val(),
-			password: $("#password").val(),
-			passwordRetyped: $("#passwordRetyped").val()
-		};
-	};
-
-	$( "form" ).on( "submit", function( event ) {
-		event.preventDefault();
-
-		$.ajax({
-			type: "POST",
-			url: contextPath + "/api/bennu-portal/bootstrap",
-			data: JSON.stringify(loadBootstrapData()),
-			success: function( data, textStatus, jqXHR ) {	alert("DATA received: " + data );		},
-			dataType: "json",
-			contentType: 'application/json'
-		});
-
-		console.log("DATA sent!");
-	});
-
-
-</script>
+</style>
 
 </html>
