--- a/bennu-portal/src/main/webapp/bennu-portal/bootstrap.html
+++ b/bennu-portal/src/main/webapp/bennu-portal/bootstrap.html
@@ -2,23 +2,10 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-resource.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-animate.js" type="text/javascript"></script>
-
+	<script type="text/javascript" src="bennu-portal/js/angular.min.js"></script>
 	<script type="text/javascript" src="bennu-portal/js/jquery.min.js"></script>
-	<script type="text/javascript" src="bennu-portal/bootstrap.js"></script>
-
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-
+	<script type="text/javascript" src="bennu-portal/js/bootstrap.js"></script>
+	<link rel="stylesheet" href="bennu-portal/css/bootstrap.min.css">
 	<title>{{bootstrapper.name}}</title>
 </head>
 <div class="container">
